# crucible

./: .gitignore  .harness.json  AGENTS.md  CLAUDE.md  KILLSWITCH.md  PLAN.md  README.md  crucible_paths.py  pyproject.toml  run_demo.py
.pi/: APPEND_SYSTEM.md
agent/: bandit.py  brave.py  canary.py  codegen.py  config.py  digest.py  director.py  elite.py  families.py  fintwit.py  firecrawl.py  forge_state.py  joint_state.py  lint.py  llm.py  measure_scout.py  morning_report.py  night_plan.py  propose.py  run_log.jsonl  run_one.py  run_worker.py  sandbox.py  scout.py  sentinel.py  triage.py  x_twitter.py
examples/: model-policy.json
forward/: _gate_diff_capture.py  amihud_battery.py  amihud_battery_results.json  bab_battery.py  bab_track.py  battery.py  breadth_calibration.py  breadth_calibration_summary.json  cost_ladder_validation.json  cost_rescore.jsonl  cost_rescore.py  cost_rescore_summary.json  defensive_bab_frozen.py  defensive_bab_largecap.py  enqueue_valmom_tiers.py  evidence.py  generalize.py  generalize_valmom.py  generalize_valmom_cpcv.py  lifecycle.py  lifecycle_state.json  macro_calibration.py  macro_calibration_summary.json  mcpt.py  mcpt_sweep_nearmisses.py  mcpt_sweep_results.json  rerun_large_leg.py  retro_verify_tranched_v3.py  sharpe_inference_calibration.py  sharpe_inference_calibration_summary.json  soak_g6g7.py  validate_cost_ladder.py
goggles/: .raw_url  README.md  quant-research.goggle
leg_d/: README.md  arxiv-note.md  blog-short.md  outreach-kit.md  outreach-log.md  the-graveyard.md
live/: deploy.py
mcp/: README.md  run.sh  server.py
(+211 files in other folders)
